<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, VoiceActivity!</string>
    <string name="app_name">Voice</string>
    <string name="yes">Profile</string>
    <string name="no">Cancel</string>
    <string name="providerpf_rate_review_label1">&quot;Review this provider!&quot;</string>
    <string name="submit">Submit</string>
    <string name="contact_copyright">Find-A-Doc is an app provided by the University of Pennsylvania School of Nursing and School of Engineering and Applied Science</string>
    <string name="contact_more">For more information, please contact:</string>
    <string name="contact_info_name">Evan Wu or Hui Jia</string>
    <string name="contact_info_email">evanswu@nursing.seas.upenn.edu</string>
    <string name="contact_info_number">1-215-255-2555</string>
    <string name="search_title">Search for Provider</string>

    <string name="providerpf_rate_comment_label2">&quot;One Line Comment Summary&quot;</string>
    <string name="providerpf_rate_comment_label3">&quot;More Comments&quot;</string>
    <string name="pros">(up to 3 choices)</string>
    <string name="cons">(up to 3 choices)</string>
    <string name="pros1">&quot;care about patient&quot;</string>
    <string name="pros2">&quot;quick diagnosis&quot;</string>
    <string name="pros3">&quot;easy for parking&quot;</string>
    <string name="pros4">&quot;cost reasonable&quot;</string>
    <string name="pros5">&quot;easy to make appointment&quot;</string>
    
    <string name="cons1">&quot;don\'t care about patient&quot;</string>
    <string name="cons2">&quot;slow diagnosis&quot;</string>
    <string name="cons3">&quot;hard for parking&quot;</string>
    <string name="cons4">&quot;cost not reasonable&quot;</string>
    <string name="cons5">&quot;hard to make appointment&quot;</string>
    
    <string name="new_pc1">&quot;adequate parking&quot;</string>
    <string name="new_pc2">&quot;availability of appointments&quot;</string>
    <string name="new_pc3">&quot;cleanliness/attractiveness of office&quot;</string>
    <string name="new_pc4">&quot;communication/patient education&quot;</string>
    <string name="new_pc5">&quot;continuity of care&quot;</string>
    
    <string name="new_pc6">&quot;costs/billling&quot;</string>
    <string name="new_pc7">&quot;empathy of doctor&quot;</string>
    <string name="new_pc8">&quot;helpfulness of staff&quot;</string>
    <string name="new_pc9">&quot;knowledge/clinical skills of doctor&quot;</string>
    <string name="new_pc10">&quot;office location&quot;</string>
    
    <string name="new_pc11">&quot;patient access to health records&quot;</string>
    <string name="new_pc12">&quot;punctuality/wating time&quot;</string>
    <string name="new_pc13">&quot;quality of follow up&quot;</string>
    <string name="new_pc14">&quot;shared decision making&quot;</string>
    <string name="new_pc15">&quot;time with doctor&quot;</string>
    
        <string name="new_pc1_con">&quot;bad in adequate parking&quot;</string>
    <string name="new_pc2_con">&quot;bad in availability of appointments&quot;</string>
    <string name="new_pc3_con">&quot;bad in cleanliness/attractiveness of office&quot;</string>
    <string name="new_pc4_con">&quot;bad in communication/patient education&quot;</string>
    <string name="new_pc5_con">&quot;bad in continuity of care&quot;</string>
    
    <string name="new_pc6_con">&quot;bad in costs/billling&quot;</string>
    <string name="new_pc7_con">&quot;bad in empathy of doctor&quot;</string>
    <string name="new_pc8_con">&quot;bad in helpfulness of staff&quot;</string>
    <string name="new_pc9_con">&quot;bad in knowledge/clinical skills of doctor&quot;</string>
    <string name="new_pc10_con">&quot;bad in office location&quot;</string>
    
    <string name="new_pc11_con">&quot;bad in patient access to health records&quot;</string>
    <string name="new_pc12_con">&quot;bad in punctuality/wating time&quot;</string>
    <string name="new_pc13_con">&quot;bad in quality of follow up&quot;</string>
    <string name="new_pc14_con">&quot;bad in shared decision making&quot;</string>
    <string name="new_pc15_con">&quot;bad in time with doctor&quot;</string>
       
    
    <string name="provider_prompt">Select your insurance provider</string>
    <string-array name="provider_array">
        <item>Aetna</item>
        <item>Highmark</item>
        <item>Keystone</item>
        <item>Vista</item>
        <item>Gateway</item>
    </string-array>
    
    <string name="parking_prompt">Parking</string>
    <string-array name="parking_array">
        <item>Doesn\'t matter</item>
        <item>Yes</item>
    </string-array>
    
    <string name="pros_prompt">Best things (up to 3)</string>
    <string-array name="pros_array">
        <item>care about patient</item>
        <item>quick diagnosis</item>
        <item>easy for parking</item>
        <item>cost reasonable</item>
        <item>easy to make appointment</item>
    </string-array>
    
        <string name="cons_prompt">Worst things (up to 3)</string>
    <string-array name="cons_array">
        <item>don\'t care about patient</item>
        <item>slow diagnosis</item>
        <item>hard for parking</item>
        <item>cost not reasonable</item>
        <item>hard to make appointment</item>
    </string-array>
    
    
    <string name="newpatient_prompt">Accept new patient</string>
    <string-array name="newpatient_array">
        <item>Doesn\'t matter</item>
        <item>Yes</item>
    </string-array>
    
    <string name="handicap_prompt">Handicap Accessibility</string>
    <string-array name="handicap_array">
        <item>Doesn\'t matter</item>
        <item>Yes</item>
    </string-array>
    
    <string name="creditcard_prompt">Accept Credit card</string>
    <string-array name="creditcard_array">
        <item>Doesn\'t matter</item>
        <item>Yes</item>
    </string-array>
    
    <string name="appointmentonly_prompt">Appointment Only</string>
    <string-array name="appointmentonly_array">
        <item>Doesn\'t matter</item>
        <item>Yes</item>
    </string-array>
    
    <string name="providertype_prompt">Provder Type</string>
    <string-array name="providertype_array">
        <item>Doesn\'t matter</item>
        <item>Primary Care</item>
        <item>Specialist</item>
    </string-array>

</resources>