<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="10dp" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/providerpf_rate_comment_label2" />

    <EditText
        android:id="@+id/providerpf_rate_review_summary"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:maxLines="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/providerpf_rate_comment_label3" />

    <EditText
        android:id="@+id/providerpf_rate_review"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:minLines="5" />

    <Button
        android:id="@+id/button_pros"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Best things about this provider" />

    <Button
        android:id="@+id/button_cons"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Worst things about this provider" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Overall Review" />

    <RatingBar
        android:id="@+id/providerpf_rate_bar"
        style="?android:attr/ratingBarStyleIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:isIndicator="false"
        android:numStars="5"
        android:stepSize="1.0" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Friendliness" />

    <RatingBar
        android:id="@+id/providerpf_rate_friendly_bar"
        style="?android:attr/ratingBarStyleIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:isIndicator="false"
        android:numStars="5"
        android:stepSize="1.0" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Office Environment" />

    <RatingBar
        android:id="@+id/providerpf_rate_environment_bar"
        style="?android:attr/ratingBarStyleIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:isIndicator="false"
        android:numStars="5"
        android:stepSize="1.0" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Communication" />

    <RatingBar
        android:id="@+id/providerpf_rate_communication_bar"
        style="?android:attr/ratingBarStyleIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:isIndicator="false"
        android:numStars="5"
        android:stepSize="1.0" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Professional Skills" />

    <RatingBar
        android:id="@+id/providerpf_rate_professsionalSkills_bar"
        style="?android:attr/ratingBarStyleIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:isIndicator="false"
        android:numStars="5"
        android:stepSize="1.0" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Costs" />

    <RatingBar
        android:id="@+id/providerpf_rate_costs_bar"
        style="?android:attr/ratingBarStyleIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:isIndicator="false"
        android:numStars="5"
        android:stepSize="1.0" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Availability" />

    <RatingBar
        android:id="@+id/providerpf_rate_availability_bar"
        style="?android:attr/ratingBarStyleIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:isIndicator="false"
        android:numStars="5"
        android:stepSize="1.0" />

    <Button
        android:id="@+id/providerpf_rate_button_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit" />
</LinearLayout>

</ScrollView>